azure/k8s_solution/frontend-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-app
  namespace: default
  labels:
    app: next-app
spec:
  selector:
    app: next-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
