azure/k8s_solution/frontend-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-app
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: infrarock.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next-app
                port:
                  number: 80
  tls:
    - hosts:
        - infrarock.tech
      secretName: next-app-tls
